Solve layout problem
Unit "Flexbox: Alignment (https://github.com/Michael080/Odin-Project/tree/master/1_Web-Development-101/4_Flexbox/4_Alignment)"

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -24,3 +24,49 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+/* Solution */
+
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 1em;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+}
+
+ul {
+  display: flex;
+  gap: 1em;
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+}
+
+button {
+  padding: .75em 1.15em;
+}
+
+a {
+  color: #666666;
+  text-decoration: none;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 1em;
+}
+
+.footer {
+  background-color: #eeeeee;
+}
